feat: checkpoint recursive ST4 migration